# sov-rollup-manager

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-ci.yml
crates/mock-rollup/: Cargo.toml
crates/mock-rollup/src/: lib.rs  main.rs
crates/sov-rollup-versioned-setup/: Cargo.toml
crates/sov-rollup-versioned-setup/src/: lib.rs
crates/sov-soak-manager/: Cargo.toml
crates/sov-soak-manager/src/: lib.rs
crates/sov-versioned-artifact-builder/: Cargo.toml
crates/sov-versioned-artifact-builder/src/: lib.rs
crates/sov-versioned-artifact-builder/tests/: integration.rs
crates/upgrade-simulator/: Cargo.toml  README.md
crates/upgrade-simulator/src/: builder.rs  docker.rs  error.rs  lib.rs  main.rs  node_config.rs  node_runner.rs  soak.rs  test_case.rs
crates/upgrade-simulator/test-cases/example-testcase/: test_case.toml
crates/upgrade-simulator/test-cases/example-testcase-multinode/: README.md  test_case.toml
crates/upgrade-simulator/test-cases/starter-chain-hash-upgrade/: test_case.toml
crates/upgrade-simulator/test-cases/starter-chain-hash-upgrade-multinode/: genesis.json
crates/upgrade-simulator/test-cases/starter-chain-hash-upgrade-multinode/v0/: config_master.toml  config_replica_1.toml
crates/upgrade-simulator/test-cases/starter-chain-hash-upgrade-multinode/v1/: config_replica_0.toml
crates/upgrade-simulator/test-cases/starter-chain-hash-upgrade/v1/: evm_pinned_cache.json
crates/upgrade-simulator/test-cases/starter-trivial-test/: test_case.toml
crates/upgrade-simulator/test-cases/starter-trivial-test/v0/: config.toml
crates/upgrade-simulator/test-cases/starter-trivial-test/v1/: config.toml
crates/upgrade-simulator/tests/: e2e_simulator_run.rs  preparation_integration.rs
crates/workspace-test-utils/: Cargo.toml
crates/workspace-test-utils/src/: lib.rs
src/: checkpoint.rs  config.rs  lib.rs  main.rs  rollup_api.rs  runner.rs
tests/: integration.rs
