[workspace]
members = ["crates/mock-rollup", "crates/upgrade-simulator"]
default-members = ["."]

[package]
name = "sov-rollup-manager"
description = "Manager and coordinator for handling hard fork upgrades using multiple versioned binaries of a Sovereign SDK rollup."
version = "0.0.1"
edition = "2024"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mock-rollup = { path = "crates/mock-rollup" }
tempfile = "3"
