[workspace]
members = [
    "crates/mock-rollup",
    "crates/sov-soak-manager",
    "crates/sov-versioned-artifact-builder",
    "crates/upgrade-simulator",
]
default-members = ["."]

[package]
name = "sov-rollup-manager"
description = "Manager and coordinator for handling hard fork upgrades using multiple versioned binaries of a Sovereign SDK rollup."
version = "0.0.1"
edition = "2024"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
signal-hook = "0.3"
ureq = { version = "3", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
escargot = "0.5"
mock-rollup = { path = "crates/mock-rollup" }
nix = { version = "0.29", features = ["signal", "process"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
