[package]
name = "mock-rollup"
description = "Mock rollup binary for integration testing of sov-rollup-manager."
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
