[package]
name = "sov-rollup-versioned-setup"
version = "0.0.1"
edition = "2024"
license = "Sovereign Permissionless Commercial License"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sov-versioned-artifact-builder = { path = "../sov-versioned-artifact-builder" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
