[package]
name = "sov-soak-manager"
description = "Orchestrate versioned soak-test binaries."
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
