[package]
name = "upgrade-simulator"
description = "Framework for testing rollup upgrades using sov-rollup-manager."
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
escargot = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sov-rollup-manager = { path = "../.." }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
